change web socket path

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -30,7 +30,7 @@
 </table>
 
 <script>
-    var url = 'ws://localhost:8000/ws/new/'
+    var url = 'ws://livedatawebsocket.herokuapp.com/ws/new/'
 
     var socket = new WebSocket(url);
 
