--- a/livedata/templates/home_sensor.html
+++ b/livedata/templates/home_sensor.html
@@ -6,11 +6,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <style>
-
-.card{
-  margin-left: 10pt;
-  margin-right: 10pt;;
-}
+        .card{
+          margin-left: 10pt;
+          margin-right: 10pt;;
+        }
       }
     </style>
 
@@ -21,12 +20,12 @@
 
 
 <div class="row" data-masonry='{"percentPosition": true }'>
-  <div class="col-sm col-lg-6 mb-4">
+  <div class="col col-lg-6 mb-4">
     <div class="card" id="card_data">
 
     </div>
   </div>
-  <div class="col-sm col-lg-6 mb-4">
+  <div class="col col-lg-6 mb-4">
     <div class="card" id="card_data1">
 
     </div>
