--- a/livedata/templates/home.html
+++ b/livedata/templates/home.html
@@ -166,6 +166,7 @@
       //console.log(ctx);
 
       var index = list_UUID.indexOf(uuid);
+      console.log(index);
       var grData = list_grahp_data[index];
       //console.log(grData);
 
