--- a/livedata/templates/home.html
+++ b/livedata/templates/home.html
@@ -166,7 +166,7 @@
       //console.log(ctx);
 
       var index = list_UUID.indexOf(uuid);
-      //console.log(index);
+      console.log(index + "");
       var grData = list_grahp_data[index];
       if(grData){
         return
