--- a/livedata/templates/home.html
+++ b/livedata/templates/home.html
@@ -58,8 +58,10 @@
     }
 
     function addData(data) {
+      var flag = false;
       var uuid = data.UUID;
       if(!list_UUID.includes(uuid)){
+        flag = true;
         list_UUID.push(uuid);
         var col = `
             <div class = "col col-xl-6" id="`+uuid+`">
@@ -68,7 +70,22 @@
         document.getElementById('content').innerHTML += col;
         console.log(col);
 
-        
+        var graphData = {
+          type: 'line',
+          data: {
+              labels: ['-5', '-4', '-3', '-2', '-1', 'Now'],
+              datasets: [{
+                  label: '# of Votes',
+                  data: [12, 19, 3, 5, 2, 3],
+                  backgroundColor: [
+                      'rgba(73, 198, 230, 0.5)',
+                  ],
+                  borderWidth: 1
+              }]
+          },
+          option:{}
+        }
+        list_graph_data.push(graphData);
       }
         
       var acc = data.data[0];
@@ -142,23 +159,7 @@
             `
       document.getElementById(uuid).innerHTML = html;  //add content
 
-      if(!list_UUID.includes(uuid)){
-        var graphData = {
-          type: 'line',
-          data: {
-              labels: ['-5', '-4', '-3', '-2', '-1', 'Now'],
-              datasets: [{
-                  label: '# of Votes',
-                  data: [12, 19, 3, 5, 2, 3],
-                  backgroundColor: [
-                      'rgba(73, 198, 230, 0.5)',
-                  ],
-                  borderWidth: 1
-              }]
-          },
-          option:{}
-        }
-        list_graph_data.push(graphData);
+      if(flag){
         var ctx = document.getElementById('chart_' + uuid).getContext('2d');
         var myChart = new Chart(ctx, graphData);
         list_chart.push(myChart);
