--- a/livedata/templates/home.html
+++ b/livedata/templates/home.html
@@ -13,8 +13,8 @@
       margin: 10pt;
     }
 
-    .col-6 {
-      min-width: 180pt;
+    .col-5 {
+      max-width: 180pt;
     }
 
     .table {
@@ -22,7 +22,7 @@
     }
 
     .canvas{
-      max-width: 180;
+      max-width: 200;
     }
   </style>
 
@@ -119,7 +119,7 @@
             <hr>
 
             <div class="row">
-              <div class="col-6">
+              <div class="col-5">
                 <table class="table">
                   <thead>
                     <tr>
@@ -153,7 +153,7 @@
                 </table>
               </div>
 
-              <div class="col-6">
+              <div class="col-7">
                 <canvas id="chart_`+uuid+`" width="180" height="180"></canvas>
               </div>
             </div>
