--- a/livedata/templates/home.html
+++ b/livedata/templates/home.html
@@ -13,17 +13,10 @@
       margin: 10pt;
     }
 
-    .col-5 {
-      max-width: 180pt;
-    }
-
     .table {
       font-size: 13px;
     }
 
-    .canvas{
-      max-width: 200;
-    }
   </style>
 
 </head>
@@ -154,7 +147,7 @@
               </div>
 
               <div class="col-7">
-                <canvas id="chart_`+uuid+`" width="180" height="180"></canvas>
+                <canvas id="chart_`+uuid+`"></canvas>
               </div>
             </div>
           </div>
