--- a/livedata/templates/home.html
+++ b/livedata/templates/home.html
@@ -183,7 +183,7 @@
 
       console.log(new_graph_data);
       console.log(chartT);
-      chartT.update();
+      //chartT.update();
     }
 
   </script>
