--- a/livedata/templates/home.html
+++ b/livedata/templates/home.html
@@ -162,7 +162,7 @@
         list_chart.push(myChart);
       }
 
-      draw(uuid, gyr);
+      //draw(uuid, gyr);
       
     }
 
@@ -183,7 +183,7 @@
 
       console.log(new_graph_data);
       console.log(chartT);
-      //chartT.update();
+      chartT.update();
     }
 
   </script>
